added AFN to lb formale

--- a/Lab-Lb. formale&autom/AFN/AFN.cbp
+++ b/Lab-Lb. formale&autom/AFN/AFN.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="AFN.cpp" />
+		<Unit filename="AFN.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
