--- a/Lab-AlgGrafuri/AVL/AVL.cbp
+++ b/Lab-AlgGrafuri/AVL/AVL.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Gradele nodurilor" />
+		<Option title="AVL" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Gradele nodurilor" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/AVL" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Gradele nodurilor" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/AVL" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,7 +32,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="date.txt" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
