fixed geometry project

--- a/Anul 2/Sisteme de Operare/Count strings/Count strings.cbp
+++ b/Anul 2/Sisteme de Operare/Count strings/Count strings.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="divizori.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="files.c">
 			<Option compilerVar="CC" />
 		</Unit>
